login and register page added

--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -9,5 +9,6 @@
     "/js/origin_report.js": "/js/origin_report.js?id=b8d85fd0d9a03a4db6e2",
     "/css/vendor.css": "/css/vendor.css?id=689f93c74c6e23598fe3",
     "/css/website.css": "/css/website.css?id=1756f3aa27198b0927e1",
-    "/js/vendor.js": "/js/vendor.js?id=8f229eeb567864555c2b"
+    "/js/vendor.js": "/js/vendor.js?id=8f229eeb567864555c2b",
+    "/js/common.js": "/js/common.js?id=4e47f4e81d5f2d80e8b6"
 }
