--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -10,5 +10,6 @@
     "/css/vendor.css": "/css/vendor.css?id=689f93c74c6e23598fe3",
     "/css/website.css": "/css/website.css?id=c7abd48c5e2e76730533",
     "/js/vendor.js": "/js/vendor.js?id=1ce3ad693e04c178505a",
-    "/js/common.js": "/js/common.js?id=4e47f4e81d5f2d80e8b6"
+    "/js/common.js": "/js/common.js?id=4e47f4e81d5f2d80e8b6",
+    "/js/twitter-widgets.js": "/js/twitter-widgets.js?id=3ce571864e8afdda3bc0"
 }
