--- a/public/.htaccess
+++ b/public/.htaccess
@@ -59,7 +59,7 @@
         ExpiresActive On
         ExpiresByType image/jpg "access 1 year"
         ExpiresByType image/jpeg "access 1 year"
-        ExpiresByType image/gif "access 1 year"
+        ExpiresByType image/webp "access 1 year"
         ExpiresByType image/png "access 1 year"
         ExpiresByType text/css "access 1 month"
         ExpiresByType text/html "access 1 month"
