--- a/composer.json
+++ b/composer.json
@@ -8,19 +8,19 @@
     "license": "MIT",
     "type": "project",
     "require": {
-        "php": ">=7.0.0",
+        "php": "^7.2",
         "doctrine/dbal": "^2.9",
         "fideloper/proxy": "^4.0",
-        "laravel/framework": "^5.8.0",
+        "laravel/framework": "^6.18.35",
         "laravel/tinker": "~1.0",
         "maatwebsite/excel": "^3.1",
         "mews/captcha": "^3.0"
     },
     "require-dev": {
         "filp/whoops": "~2.0",
-        "fzaninotto/faker": "~1.4",
+        "fakerphp/faker": "^1.9.1",
         "mockery/mockery": "~1.0",
-        "phpunit/phpunit": "~7.0",
+        "phpunit/phpunit": "^8.0",
         "symfony/thanks": "^1.0"
     },
     "autoload": {
