--- a/composer.json
+++ b/composer.json
@@ -8,17 +8,16 @@
     "license": "MIT",
     "type": "project",
     "require": {
-        "php": "^7.2",
-        "doctrine/dbal": "^2.9",
-        "fideloper/proxy": "^4.0",
-        "laravel/framework": "^6.18.35",
-        "laravel/tinker": "~1.0",
-        "maatwebsite/excel": "^3.1",
-        "mews/captcha": "^3.0"
+        "php": "^8.1",
+        "doctrine/dbal": "^4.1.0",
+        "laravel/framework": "^11.0",
+        "laravel/tinker": "^2.9",
+        "maatwebsite/excel": "^3.1.56",
+        "mews/captcha": "^3.4.0"
     },
     "require-dev": {
-        "filp/whoops": "~2.0",
-        "fakerphp/faker": "^1.9.1",
+        "filp/whoops": "~2.15.4",
+        "fakerphp/faker": "^1.23.1",
         "mockery/mockery": "~1.0",
         "phpunit/phpunit": "^8.0",
         "symfony/thanks": "^1.0"
@@ -62,6 +61,9 @@
     "config": {
         "preferred-install": "dist",
         "sort-packages": true,
-        "optimize-autoloader": true
+        "optimize-autoloader": true,
+        "allow-plugins": {
+            "symfony/thanks": true
+        }
     }
 }
